--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sequelize": "^5.22.4",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^5.22.4"
   },
   "devDependencies": {},
   "scripts": {
